--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://WamarpeMaximilianoKiss.github.io/ecomerce2022",
+  "homepage": "http://WamarpeMaximilianoKiss.github.io/",
   "name": "ecomerce2022",
   "version": "0.1.0",
   "private": true,
