--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "accounting": "^0.4.1",
+    "axios": "^0.25.0",
     "firebase": "^9.6.5",
+    "material-table": "^1.69.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^6.14.2",
