--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-hook-form": "^6.14.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "sweetalert2": "^11.4.0",
+    "sweetalert2-react-content": "^4.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
