--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "accounting": "^0.4.1",
+    "antd": "^4.19.2",
     "axios": "^0.25.0",
     "firebase": "^9.6.5",
     "material-table": "^1.69.3",
@@ -20,6 +21,7 @@
     "react-hook-form": "^6.14.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-slick": "^0.28.1",
     "sweetalert2": "^11.4.0",
     "sweetalert2-react-content": "^4.2.0",
     "web-vitals": "^2.1.4"
